--- a/hw4/Makefile
+++ b/hw4/Makefile
@@ -5,26 +5,28 @@ CFLAGS=-g -O0 -fPIC -Wall -std=gnu11
 TESTS=t-test1 test1
 HEADERS= malloc.h malloc_utils.h
 
-all:	${TESTS} libmalloc.so
+all: ${TESTS} libmalloc.so
 
 clean:
 	rm -rf *.o *.so ${TESTS}
 
 libmalloc.so: malloc_utils.o malloc.o free.o realloc.o calloc.o memalign.o
-	$(CC) $(CFLAGS) -shared -Wl,--unresolved-symbols=ignore-all $? -o $@
+	$(CC) $(CFLAGS) -shared -Wl,--unresolved-symbols=ignore-all $^ -o $@ -lpthread
 
 %: %.c
 	$(CC) $(CFLAGS) $< -o $@ -lpthread
 
 # For every XYZ.c file, generate XYZ.o.
 %.o: %.c ${HEADERS}
-	$(CC) $(CFLAGS) $< -c -o $@
+	$(CC) $(CFLAGS) $< -c -o $@ -lpthread
 
 check1:	libmalloc.so test1 t-test1
 	LD_PRELOAD=`pwd`/libmalloc.so ./t-test1
 
 check:	libmalloc.so ${TESTS}
 	LD_PRELOAD=`pwd`/libmalloc.so ./test1
+
+tt: libmalloc.so test1
 
 dist: clean
 	dir=`basename $$PWD`; cd ..; tar cvf $$dir.tar ./$$dir; gzip $$dir.tar
